--- a/src/app/main.fxml
+++ b/src/app/main.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
   <children>
-    <HBox alignment="CENTER" layoutX="14.0" layoutY="51.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="340.0" prefWidth="872.0" spacing="30.0" AnchorPane.bottomAnchor="209.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="51.0">
+    <HBox alignment="CENTER" layoutX="14.0" layoutY="51.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="361.0" prefWidth="872.0" spacing="30.0" AnchorPane.bottomAnchor="99.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="51.0">
       <children>
         <ImageView fx:id="originalImageView" fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
           <effect>
@@ -25,9 +26,10 @@
       </children>
     </HBox>
     <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadImage" text="Load Image" />
-      <ColorPicker fx:id="colorPicker" layoutX="14.0" layoutY="426.0" />
-      <Button layoutX="14.0" layoutY="471.0" mnemonicParsing="false" onAction="#addColorToList" text="Add Color" />
       <ListView fx:id="paletteListView" layoutX="195.0" layoutY="426.0" orientation="HORIZONTAL" prefHeight="70.0" prefWidth="690.0" />
       <Button layoutX="809.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveImage" text="Save Image" />
+      <Button layoutX="408.0" layoutY="14.0" mnemonicParsing="false" onAction="#applyDither" text="Apply Dither" />
+      <Spinner fx:id="factorSpinner" editable="true" layoutX="14.0" layoutY="444.0" prefHeight="26.0" prefWidth="102.0" />
+      <Label layoutX="14.0" layoutY="426.0" text="Quantize factor" />
   </children>
 </AnchorPane>
