--- a/src/app/main.fxml
+++ b/src/app/main.fxml
@@ -2,12 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
   <children>
@@ -26,10 +26,10 @@
       </children>
     </HBox>
     <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadImage" text="Load Image" />
-      <ListView fx:id="paletteListView" layoutX="195.0" layoutY="426.0" orientation="HORIZONTAL" prefHeight="70.0" prefWidth="690.0" />
       <Button layoutX="809.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveImage" text="Save Image" />
       <Button layoutX="408.0" layoutY="14.0" mnemonicParsing="false" onAction="#applyDither" text="Apply Dither" />
       <Spinner fx:id="factorSpinner" editable="true" layoutX="14.0" layoutY="444.0" prefHeight="26.0" prefWidth="102.0" />
       <Label layoutX="14.0" layoutY="426.0" text="Quantize factor" />
+      <Text fx:id="paletteText" layoutX="520.0" layoutY="416.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x color palette" />
   </children>
 </AnchorPane>
